Add fallback content for about page

--- a/about.html
+++ b/about.html
@@ -111,12 +111,12 @@
     <div class="info-card" data-section="vision">
       <h3 data-lang="ar">الرؤية</h3>
       <h3 data-lang="en" hidden>Vision</h3>
-      <p></p>
+      <p data-default-ar="نطمح إلى تمكين طلاب برنامج خطوة أكاديمياً واجتماعياً وبناء مجتمع داعم يرسّخ روح المبادرة والتعاون." data-default-en="We strive to empower Khotwa students academically and socially while building a supportive community rooted in initiative and collaboration.">نطمح إلى تمكين طلاب برنامج خطوة أكاديمياً واجتماعياً وبناء مجتمع داعم يرسّخ روح المبادرة والتعاون.</p>
     </div>
     <div class="info-card" data-section="mission">
       <h3 data-lang="ar">الرسالة</h3>
       <h3 data-lang="en" hidden>Mission</h3>
-      <p></p>
+      <p data-default-ar="نعمل على تمثيل الطلاب وتقديم مبادرات وخدمات نوعية تعزّز التجربة الجامعية، وتدعم التواصل بين الطلبة والجهات الأكاديمية." data-default-en="We represent students and deliver initiatives and services that enrich university life and strengthen communication between students and academic stakeholders.">نعمل على تمثيل الطلاب وتقديم مبادرات وخدمات نوعية تعزّز التجربة الجامعية، وتدعم التواصل بين الطلبة والجهات الأكاديمية.</p>
     </div>
   </div>
 
